[Identity Service] Close binding on IdentityManager shutdown

IdentityManager was not closing its binding on its shutdown, which
causes a DCHECK to fire in the case where it is holding onto a pending
callback from a consumer request. One example where this occurs is the
case where a consumer has called GetPrimaryAccountWhenAvailable() and
the browser subsequently shuts down without the user ever having signed
in.

This CL fixes the glitch and adds a unittest that causes the relevant
DCHECK to fire without the fix. See crbug.com/766338 for repro steps
that exercise this behavior in production (note that DCHECKs must be
enabled to actually see evidence of the prior buggy behavior).

Bug: 766338
Change-Id: If1cf9e03111cb7825f0311b4f971d38d5c31bca7
Reviewed-on: https://chromium-review.googlesource.com/672546
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: Colin Blundell <blundell@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502893}
Former-commit-id: f9792c073b3c79a5133462c0da01263db74ce375